# cmake-demo

./: CMakeLists.txt  README.md
C++/Application/: CMakeLists.txt
C++/Shared library/: CMakeLists.txt
C++/Static library/: CMakeLists.txt
C/Application/: CMakeLists.txt
C/Shared library/: CMakeLists.txt
C/Static library/: CMakeLists.txt
src/C++/Application/: CMakeLists.txt
src/C/Application/: CMakeLists.txt
src/C/Shared library/: CMakeLists.txt
